# mnist_train

./: CMakeLists.txt  build.sh  main.cpp  my_dataset.cpp  my_dataset.h  my_model.cpp  my_model.h  my_trainer.cpp  my_trainer.h  run.sh
